--- a/Examples/SampleAppObjC/SampleAppObjC/Info.plist
+++ b/Examples/SampleAppObjC/SampleAppObjC/Info.plist
@@ -21,5 +21,25 @@
 			</array>
 		</dict>
 	</dict>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb240038091570967</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>240038091570967</string>
+    <key>FacebookClientToken</key>
+    <string>14b19cc77a58f6a0e0f4e41ee8b8997f</string>
+    <key>FacebookDisplayName</key>
+    <string>SampleAppObjC</string>    
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fb-messenger-share-api</string>
+    </array>
 </dict>
 </plist>
