--- a/Examples/SampleAppSwift/SampleAppSwift/Info.plist
+++ b/Examples/SampleAppSwift/SampleAppSwift/Info.plist
@@ -63,16 +63,16 @@
       <dict>
       <key>CFBundleURLSchemes</key>
       <array>
-        <string>fb1571364999932393</string>
+        <string>fbAPPID</string>
       </array>
       </dict>
     </array>
     <key>FacebookAppID</key>
-    <string>1571364999932393</string>
+    <string>APPID</string>
     <key>FacebookClientToken</key>
-    <string>4e21e31992e29a36462e8589df75f0d6</string>
+    <string>FacebookClientToken</string>
     <key>FacebookDisplayName</key>
-    <string>22 june 2</string>
+    <string>DISPLAYNAME</string>
     <key>NSUserTrackingUsageDescription</key>
     <string>Select allow to send event to Facebook App Events</string>
 </dict>
