--- a/Examples/SampleAppSwift/SampleAppSwift/Info.plist
+++ b/Examples/SampleAppSwift/SampleAppSwift/Info.plist
@@ -58,5 +58,22 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fbAPPID</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>APPID</string>
+    <key>FacebookClientToken</key>
+    <string>FacebookClientToken</string>
+    <key>FacebookDisplayName</key>
+    <string>DISPLAYNAME</string>
+    <key>NSUserTrackingUsageDescription</key>
+    <string>Select allow to send event to Facebook App Events</string>
 </dict>
 </plist>
