--- a/Examples/SampleAppObjC/SampleAppObjC/Info.plist
+++ b/Examples/SampleAppObjC/SampleAppObjC/Info.plist
@@ -2,6 +2,28 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fbAPPID</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>APPID</string>
+	<key>FacebookClientToken</key>
+	<string>CLIENT TOKEN</string>
+	<key>FacebookDisplayName</key>
+	<string>DISPLAY NAME</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -21,25 +43,5 @@
 			</array>
 		</dict>
 	</dict>
-    <key>CFBundleURLTypes</key>
-    <array>
-      <dict>
-      <key>CFBundleURLSchemes</key>
-      <array>
-        <string>fb240038091570967</string>
-      </array>
-      </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>240038091570967</string>
-    <key>FacebookClientToken</key>
-    <string>14b19cc77a58f6a0e0f4e41ee8b8997f</string>
-    <key>FacebookDisplayName</key>
-    <string>SampleAppObjC</string>    
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-      <string>fbapi</string>
-      <string>fb-messenger-share-api</string>
-    </array>
 </dict>
 </plist>
